fix page scrolling on mobile

--- a/src/pages/tools/index.styl
+++ b/src/pages/tools/index.styl
@@ -19,6 +19,7 @@ h2
   display: flex
   flex-direction: column
   gap: 20px
+  padding-bottom: 20px
 
 .tool
   background-color: var(--color-grey)
