--- a/src/style.styl
+++ b/src/style.styl
@@ -28,7 +28,8 @@
 body
   margin: 0
   background-color: var(--color-grey-darker)
-  overflow: hidden
+  overflow: auto
+  min-height: 100vh
 
 *
   font-family: Arial
@@ -42,17 +43,25 @@ body
 
 // scrollbar
 
-body::-webkit-scrollbar, div::-webkit-scrollbar
+::-webkit-scrollbar
   width: 10px
 
-body::-webkit-scrollbar-thumb, div::-webkit-scrollbar-thumb
-  background-color: var(--color-red)
+::-webkit-scrollbar-thumb
+  box-shadow: inset 0 0 10px 10px var(--color-red)
+  min-height: var(--header-height)
 
   &:hover
-    background-color: var(--color-red-light)
+    box-shadow: inset 0 0 10px 10px var(--color-red-light)
 
     &:active
-      background-color: var(--color-red)
+      box-shadow: inset 0 0 10px 10px var(--color-red)
+
+body::-webkit-scrollbar
+  border-top: var(--header-height) solid var(--color-red)
+
+body::-webkit-scrollbar-thumb
+  border-top: var(--header-height) solid transparent
+  min-height: calc(var(--header-height) * 2)
 
 // header
 
@@ -90,6 +99,10 @@ body::-webkit-scrollbar-thumb, div::-webkit-scrollbar-thumb
 
   & > span
     transition: transform .15s
+
+  & > svg
+    fill: var(--color-text-white)
+    filter: drop-shadow(-2px 2px 1px var(--color-text-shadow))
 
   &:hover
     background-color: var(--color-red-light)
@@ -227,7 +240,6 @@ body::-webkit-scrollbar-thumb, div::-webkit-scrollbar-thumb
   position: relative
   display: block
   width: 100%
-  height: 100%
 
   &:not(.loading)
     opacity: 0
@@ -238,10 +250,35 @@ body::-webkit-scrollbar-thumb, div::-webkit-scrollbar-thumb
     pointer-events: none
     animation: none
     opacity: 0
-    
-#content
+
+// footer
+
+#footer-container
   position: relative
-  height: calc(100vh - var(--header-height))
+  background-color: var(--color-red)
+  width: 100%
+  display: flex
+  justify-content: center
+  height: var(--header-height)
+  box-shadow: 0 -10px 10px var(--color-box-shadow)
+
+#footer
+  width: var(--content-width)
+  display: flex
+
+#footer-username
+  margin: auto
+
+  &::before
+    content: "@ewanhowell5195"
+    font-weight: 700
+    letter-spacing: 1px
+    text-shadow: -2px 2px 1px var(--color-text-shadow)
+    padding: 0 10px
+
+@media only screen and (max-width: 768px)
+  #footer-username::before
+    display: none
 
 // popups
 
